# AIM-watermark

./: .gitignore  LICENSE  README.md  aim_bot.py  client_secrets.json  db.sqlite3  idlist.txt  ids.py  pyproject.toml  requirements.txt  setup.py  tkinter_app.py  vigibot.py  watermark.py  watermarker.py
images/: watermark_page.ai
main/: models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_doc_upload_at.py  0003_alter_doc_upload_at.py  0004_remove_doc_upload_at.py  0005_doc_upload_date.py
main/static/main/: style.css
main/templates/main/: base.html  index.html
mysite/: settings.py  urls.py
src/: app.py  constants.py
src/aim_watermark/: cli.py  core.py  settings.py
